objects/Benefit.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Attendance_Rate__c</fullName>
        <formula>NGO_CaseMan_Total_Attended__c / ( NGO_CaseMan_Total_Attended__c + NGO_CaseMan_Total_Unattended__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Attendance_Summary__c</fullName>
        <formula>TEXT(ROUND(NGO_CaseMan_Attendance_Rate__c*100,0)) &amp; &quot;% (&quot; &amp;  TEXT( NGO_CaseMan_Total_Attended__c ) &amp; &quot; Attended / &quot;&amp; TEXT( NGO_CaseMan_Total_Unattended__c ) &amp; &quot; Absent)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Total_Attended__c</fullName>
        <label>Total Attended</label>
        <summarizedField>BenefitSchedule.NGO_CaseMan_Total_Attended__c</summarizedField>
        <summaryForeignKey>BenefitSchedule.BenefitId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Total_Enrolled__c</fullName>
        <label>Total Enrolled</label>
        <summarizedField>BenefitSchedule.NGO_CaseMan_Total_Enrolled__c</summarizedField>
        <summaryForeignKey>BenefitSchedule.BenefitId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_Total_Unattended__c</fullName>
        <label>Total Unattended</label>
        <summarizedField>BenefitSchedule.NGO_CaseMan_Total_Unattended__c</summarizedField>
        <summaryForeignKey>BenefitSchedule.BenefitId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NGO_CaseMan_isSessionBenefit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked by a Flow (NGO_CaseMan_sessionBenefit) if this is a Benefit Type of &apos;Group Session&apos; - used to control visibility of attendance components.</description>
        <inlineHelpText>Checked by a Flow (NGO_CaseMan_sessionBenefit) if this is a Benefit Type of &apos;Group Session&apos; - used to control visibility of attendance components.</inlineHelpText>
        <label>isSessionBenefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Absent_Benefit_Disbursements__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For the specified Benefit, the count of BenefitDisbursement records where Status = &quot;Excused Absent&quot; or &quot;Unexcused Absent&quot;.</description>
        <inlineHelpText>For the specified Benefit, the count of BenefitDisbursement records where Status = &quot;Excused Absent&quot; or &quot;Unexcused Absent&quot;.</inlineHelpText>
        <label>Number of Absent Benefit Disbursements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Attended_Benefit_Disbursements__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For the specified Benefit, the count of BenefitDisbursement records where Status = &quot;Attended&quot;.</description>
        <inlineHelpText>For the specified Benefit, the count of BenefitDisbursement records where Status = &quot;Attended&quot;.</inlineHelpText>
        <label>Number of Attended Benefit Disbursements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>